@@ -28,27 +28,11 @@ pub enum Error {
 
 impl std::fmt::Display for Error {
     fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
-        write!(f, "JackError: {:?}", &self) // FIXME
+        write!(f, "{:?}", self)
     }
 }
 
 impl std::error::Error for Error {}
-
-/// Used by `NotificationHandler::latency()`.
-#[derive(Clone, Copy, Debug)]
-pub enum LatencyType {
-    Capture,
-    Playback,
-}
-
-impl LatencyType {
-    pub fn to_ffi(self) -> libc::c_uint {
-        match self {
-            LatencyType::Playback => jack_sys::JackPlaybackLatency,
-            LatencyType::Capture => jack_sys::JackCaptureLatency,
-        }
-    }
-}
 
 /// Specify an option, either to continue processing, or to stop.
 #[derive(Clone, Copy, Debug, Eq, PartialEq)]
@@ -72,5 +56,20 @@ impl Control {
 impl Default for Control {
     fn default() -> Self {
         Control::Continue
+    }
+}
+
+#[derive(Clone, Copy, Debug, PartialEq, Eq)]
+pub enum LatencyType {
+    Capture,
+    Playback,
+}
+
+impl LatencyType {
+    pub fn to_ffi(self) -> libc::c_uint {
+        match self {
+            LatencyType::Playback => jack_sys::JackPlaybackLatency,
+            LatencyType::Capture => jack_sys::JackCaptureLatency,
+        }
     }
 }
